filtering is working dog

--- a/travel/index.html
+++ b/travel/index.html
@@ -30,15 +30,187 @@
       <nav>
         <div>
           <h6>Filter by</h6>
-          <h6 class="dropdown">Type of Activity</h6>
-          <h6 class="dropdown">District</h6>
+          <h6 class="dropdown activities">Type of Activity</h6>
+          <h6 class="dropdown districts">District</h6>
           <h6 class="radio-input">Austin Exclusives</h6>
           <h6 class="radio-input">Time Sensitive</h6>
+        </div>
+
+        <div class="activities hidden">
+          <ul>
+            <li>
+              <figure>
+                <img src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3></h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3></h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3></h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3></h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3></h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3></h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3></h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3></h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3></h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3></h3>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
+
+        <div class="districts hidden">
+          <!-- <input type="search"> -->
+          <ul>
+            <li>
+              <figure>
+                <img data-district="downtown" src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3>Downtown</h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img data-district="south lamar" src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3>South Lamar</h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img data-district="great hills" src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3>Great Hills</h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img data-district="west campus" src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3>West Campus</h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img data-district="south austin" src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3>South Austin</h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img data-district="allandale" src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3>Allandale</h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img data-district="warehouse district" src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3>Warehouse District</h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img data-district="domain" src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3>Domain</h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img data-district="the drag" src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3>The Drag</h3>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img data-district="barton hills" src="https://placeimg.com/520/170/arch" alt="">
+                <figcaption>
+                  <h3>Barton Hills</h3>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
         </div>
       </nav>
 
       <section class="filtered-things">
-        <h4>What to do in Austin</h4>
+        <!-- Subject to change -->
+        <h4><span class="activity">What to do</span> in <span class="district">Austin</span></h4>
         <ul>
           <li class="thing">
             <figure>
@@ -48,21 +220,24 @@
             <article class=hidden>
               <div class="name">
                 <h2>Zilker Park</h2>
-                <h5>Barton Hills</h5>
-                <h5>Zilker</h5>
+                <h5>Barton Hills &nbsp; Zilker</h5>
               </div>
               <p>
-                “IT” (otherwise known as HD 36405.b) isn’t your average
-                “oddball” exo-solar planet made of rock that wobbles on its end
-                &amp; zips around a nearby star in less than 2.46 days.
-
-                Seeking a spot of serenity somewhere in the universe, I recently
-                booked a deep-discount dodgy berth on the ‘White Elephant
-                Express Space Shuttle’, to a little known place in a galaxy far,
-                far away. If truth be told, (after reading random excerpts from
-                “The Itty Bitty Bunkum Book About Life, the Universe &amp;
-                Practically Everything Under the Sun Not To Mention Stuff Going
-                On In Remote Galaxies), I was basically delirious.
+                Zilker Park sits just across Lady Bird Lake (formarly known as
+                Town Lake) from Austin's skyline making it the perfect
+                metropolitan park. Locals and visitors enjoy 351 acres land
+                dedicated to running, jogging, biking, swimming, kayaking and
+                many other outdoor activities. The park features trails,
+                gardens, volleyball courts, natural springs, swimming area, and
+                many more amenities.
+                <br>
+                Whether you are a local or a visitor to Austin, TX, Zilker Park
+                is a must visit. The park is walking distance from many of
+                downtown Austin Hotels. You can spend the whole day at the park,
+                on Lady Bird Lake and Barton Springs Pool, or you can walk, jog
+                or ride a bike around Lady Bird Hike and Bike Trail for a quick
+                view. Whether you stay awhile, or do a quick walk-thru, make
+                sure to check out this amazing city park.
               </p>
             </article>
           </li>
@@ -74,20 +249,21 @@
             <article class="hidden">
               <div class="name">
                 <h2>Torchy's Tacos</h2>
-                <h5></h5>
+                <h5>Downtown &nbsp; Great Hills &nbsp; South Austin</h5>
               </div>
               <p>
-                “IT” (otherwise known as HD 36405.b) isn’t your average
-                “oddball” exo-solar planet made of rock that wobbles on its end
-                &amp; zips around a nearby star in less than 2.46 days.
-
-                Seeking a spot of serenity somewhere in the universe, I recently
-                booked a deep-discount dodgy berth on the ‘White Elephant
-                Express Space Shuttle’, to a little known place in a galaxy far,
-                far away. If truth be told, (after reading random excerpts from
-                “The Itty Bitty Bunkum Book About Life, the Universe &amp;
-                Practically Everything Under the Sun Not To Mention Stuff Going
-                On In Remote Galaxies), I was basically delirious.
+                The first menu was filled more with experiments than meals. So
+                whenever Mike heard his customers holler "damn these tacos are
+                good!" they were added to the menu. Soon "Damn Good" became a
+                rally cry at the trailer. The Taco Dream grew and took on a life
+                of its own with long lines and happy customers.
+                <br>
+                Today Torchy's Tacos operate over 30 stores and a trailer park.
+                They've won a bunch of cool awards and had write-ups and videos
+                spread across the nation. You can still find that passion in the
+                food at any Torchy's, and none of it would be possible without
+                all the customers, employees, friends and fans that share in the
+                Taco Dream.
               </p>
             </article>
           </li>
@@ -99,20 +275,30 @@
             <article class="hidden">
               <div class="name">
                 <h2>Punch Bowl Social</h2>
-                <h5></h5>
+                <h5>Domain</h5>
               </div>
               <p>
-                “IT” (otherwise known as HD 36405.b) isn’t your average
-                “oddball” exo-solar planet made of rock that wobbles on its end
-                &amp; zips around a nearby star in less than 2.46 days.
-
-                Seeking a spot of serenity somewhere in the universe, I recently
-                booked a deep-discount dodgy berth on the ‘White Elephant
-                Express Space Shuttle’, to a little known place in a galaxy far,
-                far away. If truth be told, (after reading random excerpts from
-                “The Itty Bitty Bunkum Book About Life, the Universe &amp;
-                Practically Everything Under the Sun Not To Mention Stuff Going
-                On In Remote Galaxies), I was basically delirious.
+                We are and always will be a place for people to come and be
+                themselves.
+                <br>
+                And we’ve stocked our place with a delectable collection of
+                unequalled music, food, games, and beverages for you to enjoy as
+                you’re being yourself.
+                <br>
+                You see, we don’t believe in uncomfortable chairs, bland walls,
+                and fluorescent lights. Those things belong in the 9 to 5 world.
+                We DO believe in a ‘dirty modern’ mash up of chandeliers,
+                ‘Gangster’s Paradise,’ food for foodies, PBR tallboys, and craft
+                beverages. We believe in brunch turning into a bowling party and
+                bowling parties turning into all-you-can-sing karaoke. We 
+                believe in exploring evenings filled with shuffleboard and
+                made-from-scratch chicken and waffles.
+                <br>
+                You put your responsible, ironed, adult pants every day of the
+                week and you deserve a place where ties and khakis are a choice
+                not a requirement. We are that place—and there are untold
+                possibilities waiting for you here. Come and discover for
+                yourself.
               </p>
             </article>
           </li>
@@ -124,7 +310,7 @@
             <article class="hidden">
               <div class="name">
                 <h2>Shenanigans</h2>
-                <h5></h5>
+                <h5>Domain</h5>
               </div>
               <p>
                 “IT” (otherwise known as HD 36405.b) isn’t your average
@@ -149,7 +335,7 @@
             <article class="hidden">
               <div class="name">
                 <h2>Container Bar</h2>
-                <h5></h5>
+                <h5>Downtown</h5>
               </div>
               <p>
                 “IT” (otherwise known as HD 36405.b) isn’t your average
@@ -174,7 +360,7 @@
             <article class="hidden">
               <div class="name">
                 <h2>Medici</h2>
-                <h5></h5>
+                <h5>Downtown &nbsp; West Campus</h5>
               </div>
               <p>
                 “IT” (otherwise known as HD 36405.b) isn’t your average
@@ -199,7 +385,7 @@
             <article class="hidden">
               <div class="name">
                 <h2>Shake Shack</h2>
-                <h5></h5>
+                <h5>Domain &nbsp; Great Hills &nbsp; South Austin &nbsp; Allandale</h5>
               </div>
               <p>
                 “IT” (otherwise known as HD 36405.b) isn’t your average
@@ -230,30 +416,19 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
+
+    <script src="https://cdn.jsdelivr.net/lodash/4.16.1/lodash.min.js"></script>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/holmes.js/js/holmes.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js scripts/plugins.js -->
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/modal.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/popover.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/carousel.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
-    <!-- <script src="https://unpkg.com/masonry-layout@4.1/dist/masonry.pkgd.min.js"></script> -->
   </body>
 </html>
