duel filters going crazayyyyyy

--- a/travel/index.html
+++ b/travel/index.html
@@ -40,81 +40,65 @@
           <ul>
             <li>
               <figure>
-                <img src="https://placeimg.com/520/170/arch" alt="">
+                <img data-activity="food" src="https://placeimg.com/520/170/arch" alt="">
                 <figcaption>
-                  <h3></h3>
+                  <h3>Food</h3>
                 </figcaption>
               </figure>
             </li>
             <li>
               <figure>
-                <img src="https://placeimg.com/520/170/arch" alt="">
+                <img data-activity="music" src="https://placeimg.com/520/170/arch" alt="">
                 <figcaption>
-                  <h3></h3>
+                  <h3>Music</h3>
                 </figcaption>
               </figure>
             </li>
             <li>
               <figure>
-                <img src="https://placeimg.com/520/170/arch" alt="">
+                <img data-activity="sports" src="https://placeimg.com/520/170/arch" alt="">
                 <figcaption>
-                  <h3></h3>
+                  <h3>Sports</h3>
                 </figcaption>
               </figure>
             </li>
             <li>
               <figure>
-                <img src="https://placeimg.com/520/170/arch" alt="">
+                <img data-activity="arts" src="https://placeimg.com/520/170/arch" alt="">
                 <figcaption>
-                  <h3></h3>
+                  <h3>Arts</h3>
                 </figcaption>
               </figure>
             </li>
             <li>
               <figure>
-                <img src="https://placeimg.com/520/170/arch" alt="">
+                <img data-activity="bars" src="https://placeimg.com/520/170/arch" alt="">
                 <figcaption>
-                  <h3></h3>
+                  <h3>Bars</h3>
                 </figcaption>
               </figure>
             </li>
             <li>
               <figure>
-                <img src="https://placeimg.com/520/170/arch" alt="">
+                <img data-activity="nature" src="https://placeimg.com/520/170/arch" alt="">
                 <figcaption>
-                  <h3></h3>
+                  <h3>Nature</h3>
                 </figcaption>
               </figure>
             </li>
             <li>
               <figure>
-                <img src="https://placeimg.com/520/170/arch" alt="">
+                <img data-activity="historic landmarks" src="https://placeimg.com/520/170/arch" alt="">
                 <figcaption>
-                  <h3></h3>
+                  <h3>Hisoric Landmarks</h3>
                 </figcaption>
               </figure>
             </li>
             <li>
               <figure>
-                <img src="https://placeimg.com/520/170/arch" alt="">
+                <img data-activity="shopping" src="https://placeimg.com/520/170/arch" alt="">
                 <figcaption>
-                  <h3></h3>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <img src="https://placeimg.com/520/170/arch" alt="">
-                <figcaption>
-                  <h3></h3>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <img src="https://placeimg.com/520/170/arch" alt="">
-                <figcaption>
-                  <h3></h3>
+                  <h3>Shopping</h3>
                 </figcaption>
               </figure>
             </li>
@@ -212,7 +196,7 @@
         <!-- Subject to change -->
         <h4><span class="activity">What to do</span> in <span class="district">Austin</span></h4>
         <ul>
-          <li class="thing">
+          <li data-activity="nature" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Zilker Park</h3></figcaption>
@@ -241,7 +225,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Torchy's Tacos</h3></figcaption>
@@ -267,7 +251,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food-bars" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Punch Bowl Social</h3></figcaption>
@@ -302,7 +286,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food-bars-music" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Shenanigans</h3></figcaption>
@@ -327,7 +311,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="bars-music" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Container Bar</h3></figcaption>
@@ -352,7 +336,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Medici</h3></figcaption>
@@ -377,7 +361,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Shake Shack</h3></figcaption>
@@ -402,7 +386,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="nature" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Zilker Park</h3></figcaption>
@@ -431,7 +415,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Torchy's Tacos</h3></figcaption>
@@ -457,7 +441,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food-bars" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Punch Bowl Social</h3></figcaption>
@@ -492,7 +476,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food-bars-music" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Shenanigans</h3></figcaption>
@@ -517,7 +501,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="bars-music" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Container Bar</h3></figcaption>
@@ -542,7 +526,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Medici</h3></figcaption>
@@ -567,7 +551,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Shake Shack</h3></figcaption>
@@ -592,7 +576,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="nature" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Zilker Park</h3></figcaption>
@@ -621,7 +605,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Torchy's Tacos</h3></figcaption>
@@ -647,7 +631,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food-bars" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Punch Bowl Social</h3></figcaption>
@@ -682,7 +666,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food-bars-music" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Shenanigans</h3></figcaption>
@@ -707,7 +691,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="bars-music" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Container Bar</h3></figcaption>
@@ -732,7 +716,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Medici</h3></figcaption>
@@ -757,7 +741,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Shake Shack</h3></figcaption>
@@ -782,7 +766,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="nature" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Zilker Park</h3></figcaption>
@@ -811,7 +795,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Torchy's Tacos</h3></figcaption>
@@ -837,7 +821,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food-bars" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Punch Bowl Social</h3></figcaption>
@@ -872,7 +856,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food-bars-music" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Shenanigans</h3></figcaption>
@@ -897,7 +881,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="bars-music" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Container Bar</h3></figcaption>
@@ -922,7 +906,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Medici</h3></figcaption>
@@ -947,7 +931,7 @@
               </p>
             </article>
           </li>
-          <li class="thing">
+          <li data-activity="food" class="thing">
             <figure>
               <img src="https://placeimg.com/1000/200/nature" alt="" />
               <figcaption><h3>Shake Shack</h3></figcaption>
@@ -990,7 +974,6 @@
     <script src="https://cdn.jsdelivr.net/lodash/4.16.1/lodash.min.js"></script>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/holmes.js/js/holmes.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
