--- a/travel/index.html
+++ b/travel/index.html
@@ -26,7 +26,29 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <main class="wrapper">
+    <div class="landing-wrapper">
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="modal-wrapper">
+        <div class="modal">
+          <section class="landing">
+            <img class="waypoint" src="https://d30y9cdsu7xlg0.cloudfront.net/png/110532-200.png" alt="" />
+            <div class="content">
+              <h1>Let's get started</h1>
+              <h5>Get an idea of how to spend your time in the busy city of Austin. See something that looks interesting? Add it to your itinerary by clicking the plus button.</h5>
+
+              <img class="add-icon" src="https://d30y9cdsu7xlg0.cloudfront.net/png/613089-200.png" alt="" />
+            </div>
+
+            <br />
+
+            <img class="down-arrow" src="https://d30y9cdsu7xlg0.cloudfront.net/png/610508-200.png" alt="" />
+          </section>
+        </div>
+      </div>
+    </div>
+
+    <main class="wrapper stay">
       <nav>
         <div>
           <h6>Filter by</h6>
