filter and unfilter; beginning of waypoints

--- a/travel/index.html
+++ b/travel/index.html
@@ -212,11 +212,33 @@
             </li>
           </ul>
         </div>
+
+        <div class="waypoints-wrapper">
+          <div class="waypoints hidden">
+            <h4>Your Waypoints</h4>
+            <ul>
+              <li>Alamo Drafthouse</li>
+              <li>Torchys Tacos</li>
+              <li>Uncommon Objects</li>
+              <li>Mount Bonnell</li>
+            </ul>
+
+            <hr />
+
+            <h5>Recommended</h5>
+            <ul>
+              <li>Alamo Drafthouse</li>
+              <li>Torchys Tacos</li>
+              <li>Uncommon Objects</li>
+              <li>Mount Bonnell</li>
+            </ul>
+          </div>
+        </div>
       </nav>
 
       <section class="filtered-things">
         <!-- Subject to change -->
-        <h4><span class="activity">What to do</span> in <span class="district">Austin</span></h4>
+        <h4><span class="activity">What to do</span> in <span class="district">Austin</span> <span class="reset hidden">Reset</span></h4>
         <ul>
           <li data-activity="nature" class="thing">
             <figure>
