--- a/travel/index.html
+++ b/travel/index.html
@@ -1025,7 +1025,7 @@
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
-    <script src="scripts/main.js"></script>
+    <script src="dist/scripts/main.js"></script>
     <!-- endbuild -->
   </body>
 </html>
